small backend fixes
overflow tinymce..editor is too narrow, id row settings set to
pull-right, removed unused bootstrap buttons for tinymce gui

--- a/profil_bootstrap_editor/js/gridmanager/gridmanager.css
+++ b/profil_bootstrap_editor/js/gridmanager/gridmanager.css
@@ -161,7 +161,8 @@
   display: none!important;
 }
 .editor-gridmanager .mce-tinymce {
-  min-width: 100%;
+  /*min-width: 100%;*/
+  min-width: 750px;
 }
 /* frontend fix */
 
